--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "cls-bluebird",
   "version": "1.1.3",
   "description": "Make bluebird work with the continuation-local-storage module.",
-  "main": "shim.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "npm run jshint && npm run test-main",
     "test-main": "tap test/*.tap.js",
-    "jshint": "jshint shim.js test"
+    "jshint": "jshint lib test"
   },
   "repository": {
     "type": "git",
