--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "jshint": "jshint lib test",
     "cover": "npm run cover-main && rm -rf coverage",
     "coveralls": "npm run cover-main && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
-    "cover-main": "COVERAGE=true istanbul cover _mocha --report lcovonly -- -R spec 'test/**/*.test.js'"
+    "cover-main": "COVERAGE=true istanbul cover _mocha --report lcovonly -- -R spec 'test/**/*.test.js'",
+    "travis": "if [ $COVERAGE ]; then npm run coveralls; else npm test; fi"
   },
   "repository": {
     "type": "git",
