--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "istanbul": "^0.4.4",
     "coveralls": "^2.11.9",
     "continuation-local-storage": "^3.1.7",
-    "bluebird": "^2.10.2"
+    "bluebird": "^2.10.2",
+    "bluebird2": "^2.1.0",
+    "bluebird3": "^2.1.0",
+    "lodash": "^4.13.1"
   }
 }
