--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cover": "npm run cover-main && rm -rf coverage",
     "coveralls": "npm run cover-main && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
     "cover-main": "COVERAGE=true BLUEBIRD_VERSION=3 istanbul cover _mocha --report lcovonly -- -R spec 'test/**/*.test.js'",
-    "travis": "if [ $COVERAGE ]; then npm run coveralls; else npm run jshint && npm run test-main; fi"
+    "travis": "bin/travis.sh"
   },
   "repository": {
     "type": "git",
