--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "devDependencies": {
     "mocha": "^4.0.1",
     "chai": "^4.1.2",
-    "jshint": "^2.9.5",
+    "jshint": "~2.9.5",
     "istanbul": "^0.4.5",
     "coveralls": "^3.0.0",
     "continuation-local-storage": "^3.2.1",
